_build/html/reports/00_05_ex_enuma_eliš.log
Traceback (most recent call last):
  File "C:\Users\luiss\anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\luiss\anaconda3\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\luiss\anaconda3\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\luiss\anaconda3\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\luiss\anaconda3\lib\asyncio\base_events.py", line 616, in run_until_complete
    return future.result()
  File "C:\Users\luiss\anaconda3\lib\site-packages\nbclient\client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "C:\Users\luiss\anaconda3\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\Users\luiss\anaconda3\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
questions = 𒀸\thorizontal wedge\t
------------------

[1;36m  Input [1;32mIn [2][1;36m[0m
[1;33m    questions = 𒀸\thorizontal wedge\t[0m
[1;37m                                     ^[0m
[1;31mSyntaxError[0m[1;31m:[0m unexpected character after line continuation character

SyntaxError: unexpected character after line continuation character (<ipython-input-2-5b578df56839>, line 1)

